k8s/apod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apod-deployment
  app: apod
  labels:
    name: apod-deployment
    app: apod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apod
  template:
    metadata:
      labels:
        app: apod
    spec:
      containers:
        - name: apod-image
          image: florian74/apod:latest
          command:
            - 'gorillaz'
            - 'fpU0kvmphwtCEPIoaEtsTyDa2x3ohuuJ3j09tXIB'
          ports:
            - containerPort: 8081
