k8s/apod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apod-service
spec:
  ports:
    - port: 80
      name: apod-http
      targetPort: 8081
      protocol: TCP
  selector:
    app: apod
